feat: 优化游戏流程，修复牌局处理逻辑，增强玩家管理